<resources>
    <string name="app_name">Bikers Run</string>
    <string name="api_key">AIzaSyATmeZ6gpP4X6B1jfCeItUYsMKQopTelMY</string>

    <string name="agregar">Agregar Direccion Origen</string>
    <string name="destino">Agregar Direccion Destino</string>
    <string name="btn_origen">Origen</string>
    <string name="btn_destino">Destino</string>
    <string name="label_origen">Direccion de origen: %s1 </string>
    <string name="label_destino">Direccion de destino: %s1 </string>
    <string name="label_distancia">distancia</string>
    <string name="label_tiempo">tiempo</string>
    <string name="macador_origen">Origen</string>
    <string name="marcador_destino">Destino</string>
    <string name="success_with_empty">ok con resultado vacio</string>
    <string name="btnGardar">Guardar Circuito</string>
    <string name="label_nombre_circuito">Agregue Nombre De Circuito</string>
    <string name="title_activity_maps">Map</string>
    <string name="success_with_status">Circuito ok</string>
    <string name="sign_out">salir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="inicio">Bikers Run</string>
    <string name="about">Acerca de Biker Run</string>
    <string name="agendar_circuitos">Agendar Circuito</string>
    <string name="iniciar_circuito">Iniciar Circuito</string>
    <string name="inicio_sesion">Iniciar Sesion</string>
    <string name="crear_circuito">Crear Circuito</string>
    <string name="circuitos">Circuitos</string>
    <string name="interes">Bicicleterias</string>
    <string name="interesDetalles">Bicicleterias</string>
    <string name="hora_circuito">Hora del Circuito</string>
    <string name="fecha_del_circuito">Fecha del Ciruito</string>


    <string name="descripcion_bike_run">Bike Run consiste en armar circuitos y tenerlos
        guardados para usarlos las veces que sean necesarios, se pueden agendar para alguna fecha en especifico con recordatorio.
        Tambien podras ver algunas tiendas escuclivas de bicicletas donde podras consultar la informacion de cada una.
    </string>
    <string name="desarrolladores">Desarrolladores: Tomas Lalanne - Jhon Carreño - Cesar Garcia</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <!--Nombres de las card del layout principal main-->
    <string name="main_circuito">Listado de Circuitos</string>
    <string name="main_detalles_circuito">Puedes seleccionar un recorrido de inicio a fin.</string>

    <string name="main_iniciar_circuito">Iniciar Circuito</string>
    <string name="main_detalles_iniciar_circuito">Te permite seleccionar un recorrido ya armado y comenzar a utilizarlo.</string>

    <string name="main_calendario">Agendar</string>
    <string name="main_detalles_calendario">Puedes agendar una fecha y horario con recordatorio para tus futuras salidas</string>

    <string name="main_tiendas_bike">Tiendas Bikers</string>
    <string name="main_detalles_tiendas">Puedes ver informacion de las tiendas de bicicletas de la ciudad de buenos aires</string>

    <string name="main_comenzar">Comenzar</string>
    <string name="spinnerDefaultDircuito">-Seleccione su circuito-</string>

    <!--Menu toolbar-->
    <string name="menu_admin">Admin</string>
    <string name="menu_acerca_de">Acerca de...</string>
    <string name="menu_cerrar_sesion">Cerrar Sesion</string>

</resources>
