<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
     android:layout_width="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".activity_alta_circuito">

    <TextView
        android:id="@+id/tvOrigen"
        android:layout_margin="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/agregar" />


    <Button
        android:id="@+id/btnOrigen"
        android:text="@string/btn_origen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvDestino"
        android:layout_margin="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/destino" />

    <Button
        android:id="@+id/btnDestino"
        android:text="@string/btn_destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
   <!-- -->
<LinearLayout
    android:id="@+id/llMapa"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_height="461dp"
        android:layout_weight="1"
        tools:context=".MapsActivity" />
    <TextView
        android:id="@+id/lldistancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_distancia" />

    <TextView
        android:id="@+id/lltiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tiempo" />



</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".AltaCircuitoActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_nombreCircuito"
                android:hint="@string/label_nombre_circuito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="agregar"
            android:text="@string/btnGardar" />
    </LinearLayout>
</LinearLayout>
</ScrollView>